# sblack4.github.io

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
chapters/01/: index.html
chapters/2020-09-15/: index.html
chapters/2023-06-11/: index.html
docs/: index.md
docs/chapters/: 01.md  2023-06-11.md
search/: search_index.json
